# andruinoR2

./: README.md  Readme.md
android/andruino_driver/: .project  AndroidManifest.xml
android/andruino_driver/res/layout/: main.xml
android/andruino_driver/res/values/: strings.xml
android/andruino_driver/src/es/andruino/andruino_driver/: ImuPublisher.java  NavSatFixPublisher.java  OrientationListener.java  andruinoROS_azimut_pub.java  andruinoROS_cmd_vel.java  andruinoROS_command_sub.java  andruinoROS_odom_pub.java  andruinoROS_sensor_Wifi.java  andruinoROS_sensor_distancia_pub.java  andruino_driver.java  sensorWifi.java
andruino_driver/: build.xml  local.properties  project.properties
andruino_driver/src/es/andruino/andruino_driver/: ImuPublisher.java  OrientationListener.java  andruinoROS_sensor_distancia_pub.java  sensorWifi.java
arduino/: CtrlMotores.cpp  CtrlMotores.h  README.md  Test01.cpp  Test01.h  Test02.cpp  Test02.h  Test03.cpp  Test03.h  Test04.cpp  Test04.h  Test05.cpp  Test05.h  Test06.cpp  Test06.h  Test07.cpp  Test07.h  Test08.cpp  Test08.h  Test09.cpp  Test09.h  Test10.cpp  Test10.h  Test11.cpp  Test11.h  Test12.cpp  Test12.h  Test13.cpp  Test13.h  Test14.cpp  Test14.h  Test15.cpp  Test15.h  Test16.cpp  Test16.h  Test18.cpp  Test18.h  Twist.cpp  Twist.h  andruino_driver_ROS_firmware.ino  (+2 more)
hardware/: AndruinoCanaletaMecanizado.dxf  AndruinoR2.fzz  README.md
python/iot/conitive/: keys_csros passwordless.py
python/iot/ros2iot/: ros2iot _passwordless.py  ros2iot _passwordless.py~
python/ros/: README.md
python/ros/ekf/: andruino_robot_pose_ekf.launch  andruino_robot_pose_ekf.launch~
python/ros/follower/: fcf2.py  follower.py  transform_image.sh
python/ros/map/: gira_crea_mapa.py  map  map.pgm  map~
python/ros/move/: move.py
python/ros/teleop_andruino/: key_publisher.py  keys_to_twist_parameterized.py  keys_to_twist_with_ramps.py
python/ros/test4/: pwmomega.csv  pwmomega2.csv  pwomega.csv  script4.py  script4.py~
python/ros/test6/: test6.py
python/ros/urdf/: andruino_simple.urdf
python/vsa/: actuators.bak1  actuators.bk2  controller.bak  controller.bak1  controller.bak2  defseq.bak1  sequence.bak1  vsa_andruino_generalizado.py  vsaros.bak  vsaros.py  vsaros10000.py  vsaros_prediccion.py
urdf-gazebo/: README.md
urdf-gazebo/gazebo_follower/: CMakeLists.txt  package.xml
urdf-gazebo/gazebo_follower/launch/: display_odometry.launch
urdf-gazebo/gazebo_follower/src/: Follower.cpp  Follower.h  Follower_Obstaculos (copia_completa).cpp  Follower_Obstaculos.cpp  odometry_publisher.cpp  state_publisher2.cpp
urdf-gazebo/gazebo_multi_robot/: CMakeLists.txt  package.xml
urdf-gazebo/gazebo_multi_robot/launch/: def_robot.launch  display.launch  gazebo_multi_robot.launch  gazebo_my6lbot.launch  my6lbot.launch  robots.launch
urdf-gazebo/gazebo_multi_robot/src/: obstaculos.cpp  state_publisher.cpp
urdf-gazebo/my6lbot_description/: CMakeLists.txt  package.xml
urdf-gazebo/my6lbot_description/launch/: display_original.launch  display_test.launch
urdf-gazebo/my6lbot_description/meshes/: arduino.dae  base.dae  camera.dae  collision_pata_corta.dae  collision_pata_larga_drcha.dae  collision_pata_larga_izqda.dae  collision_placa.dae  collision_plataforma.dae  collision_sensor_grande.dae  eje.dae  engranaje_esquinas.dae  pata_cuadrada_centro_izqda.dae  pata_cuadrada_trasera_izqda.dae  pata_larga_drcha.dae  plataforma.dae  rueda.dae
urdf-gazebo/my6lbot_description/urdf/: macros.xacro  my6lbot.gazebo  my6lbot.urdf  my6lbot.xacro  my6lbot.xacro_old
urdf-gazebo/my6lbot_gazebo/: CMakeLists.txt  package.xml
urdf-gazebo/my6lbot_gazebo/launch/: my6lbot_world_circuito.launch  my6lbot_world_circuito_decor.launch  my6lbot_world_simple.launch
urdf-gazebo/my6lbot_gazebo/plugins/: my6lbot.gazebo
urdf-gazebo/my6lbot_gazebo/worlds/: my6lbot.world  my6lbot_circuito.world  my6lbot_circuito_decor.world
urdf-gazebo/urdf/meshes/: collision_arduino.dae  collision_base.dae  collision_camera.dae  collision_eje.dae  collision_engranaje_esquinas.dae  collision_movil.dae  collision_pata_cuadrada.dae  collision_pata_cuadrada_trasera.dae  collision_placa_motores.dae  collision_plataforma_grande.dae  collision_rueda.dae  collision_sensor.dae  engranaje_esquinas_naranja.dae  movil_sc.dae  pata_corta.dae  pata_cuadrada_centro_drcha.dae  pata_cuadrada_trasera_drcha.dae  pata_larga_izqda.dae  placa_motores.dae  sensor.dae
urdf-gazebo/urdf/urdf/: my6lbot.gv  my6lbot.xml
urdf-gazebo/vision_opencv-kinetic/cv_bridge/include/cv_bridge/: CvBridge.h
